--- a/Layout/AppLayout/dashNav/dashNav.module.css
+++ b/Layout/AppLayout/dashNav/dashNav.module.css
@@ -1,14 +1,14 @@
 .container{
     color: white;
     display: grid;
-    grid-template-rows: 2fr 6fr 1fr;
+    grid-template-rows: 15vh 80vh 5vh;
 
     height: 100vh;
     width: 100%;
     /* background: rgb(71,62,167); */
     background: linear-gradient(90deg, rgba(85,115,221,1) 0%, rgba(66,140,224,1) 100%);
 
-    border-radius: 0 10px 10px 0;
+    /* border-radius: 0 10px 10px 0; */
 }
 
 .headerMenuContainer{
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 2em;
-    border-radius: 0 10px 0 0;
+    /* border-radius: 0 10px 0 0; */
 }
 
 .menuContainer{
@@ -51,4 +51,5 @@
     justify-content: center;
     border-top: 2px solid linear-gradient(90deg, rgba(0,245,245,1) 0%, rgba(2,195,195,1) 100%);
 }
+
 
