--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,56 @@
 .dashBoard{
-  grid-column: 2/7;
-  padding: 40px;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.categorieCard{
-  height: 10vh;
+
+
+.card{
+
+  width: 96%;
+  height: 60vh;
+
+  overflow: hidden;
+
+  background: white;
+
+  border-radius: 20px;
+
+  margin: 0 2% 0 2%;
+  margin-bottom: 2%;
+  padding: 2%;
+
+  box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.05);
+  /* margin-bottom: 3vh; */
+}
+
+.huecosContainer{
+
+  width: 96%;
+  height: 60vh;
+
+  background: white;
+
+  border-radius: 20px;
+
+  margin: 0 2% 2% 2%;
+  padding: 2%;
+
+  box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.05);
+
+}
+
+.huecosCards{
+
+  height: 90%;
+  padding-top: 1%;
+
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 25%;
+
+  overflow-x: auto;
+  overflow-y: hidden;
+
 }
